start building out the BMP functionality

--- a/html/content.html
+++ b/html/content.html
@@ -5,57 +5,64 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 
 
 <div class="cda-sidebar-wrapper">
-	<div class="cda-intro-text">Introduction text Introduction textIntroduction textIntroduction textIntroduction
-		textIntroduction
-		textIntroduction textIntroduction textIntroduction text</div>
+	<div class="cda-main-wrapper">
+		<div class="cda-intro-text">Introduction text Introduction textIntroduction textIntroduction textIntroduction
+			textIntroduction
+			textIntroduction textIntroduction textIntroduction text</div>
 
-	<!-- selected areas component on main page -->
-	<div class="cda-selected-area-wrapper">
-		<h4>Selected areas</h4>
-		<div class="cda-selected-areas"></div>
-	</div>
-	<!-- assesment radio buttons -->
-	<div class="cda-assesment-wrapper">
-		<h4>Select an assessment type:</h4>
-		<div id="assesment-radio-btns" class="cda-assesment-radio-btns"></div>
-	</div>
-	<!-- area scenario radio buttons -->
-	<div class="cda-areaScenario-wrapper">
-		<h4>Choose scale:</h4>
-		<div id="areaScenario-radio-btns" class="cda-areaScenario-radio-btns"></div>
-	</div>
-	<!-- delivery radio buttons -->
-	<div class="cda-delivery-wrapper">
-		<h4>Choose Delivery:</h4>
-		<div id="delivery-radio-btns" class="cda-delivery-radio-btns"></div>
+		<!-- selected areas component on main page -->
+		<div class="cda-selected-area-wrapper">
+			<h4>Selected areas</h4>
+			<div class="cda-selected-areas"></div>
+		</div>
+		<!-- assesment radio buttons -->
+		<div class="cda-assesment-wrapper">
+			<h4>Select an assessment type:</h4>
+			<div id="assesment-radio-btns" class="cda-assesment-radio-btns"></div>
+		</div>
+		<!-- area scenario radio buttons -->
+		<div class="cda-areaScenario-wrapper">
+			<h4>Choose scale:</h4>
+			<div id="areaScenario-radio-btns" class="cda-areaScenario-radio-btns"></div>
+		</div>
+		<!-- delivery radio buttons -->
+		<div class="cda-delivery-wrapper">
+			<h4>Choose Delivery:</h4>
+			<div id="delivery-radio-btns" class="cda-delivery-radio-btns"></div>
+		</div>
+
+		<!-- parameters to simulate checkboxes -->
+		<div class="cda-parameters-wrapper">
+			<h4>Parameters to simulate:</h4>
+			<div id="parameters-checkbox" class="cda-parameters-checkbox"></div>
+		</div>
+		<!-- sediment options radio button -->
+		<div class="cda-sediment-option-wrapper">
+			<h5>Select sediment options</h5>
+			<div class="cda-sediment-options-radio-btns"></div>
+		</div>
+
+		<!-- comparison type radio buttons -->
+		<!-- <div class="cda-comparison-type-wrapper">
+			<h4>Comparison type:</h4>
+			<div class="cda-comparison-type-radio-btns"></div>
+		</div> -->
+
+		<!-- Select BMP Button wrapper -->
+		<div class="cda-bmp-select-button-wrapper">
+			<button class="cda-select-bmp-button button button-primary">Select Best Management Practices</button>
+		</div>
 	</div>
 
-	<!-- parameters to simulate checkboxes -->
-	<div class="cda-parameters-wrapper">
-		<h4>Parameters to simulate:</h4>
-		<div id="parameters-checkbox" class="cda-parameters-checkbox"></div>
-	</div>
-	<!-- sediment options radio button -->
-	<div class="cda-sediment-option-wrapper">
-		<h5>Select sediment options</h5>
-		<div class="cda-sediment-options-radio-btns"></div>
+	<!-- Building BMP selections.......  -->
+	<div class="cda-retreiving-data-wrapper">
+		<h4>Retreiving Data.....</h4>
 	</div>
 
-	<!-- comparison type radio buttons -->
-	<div class="cda-comparison-type-wrapper">
-		<h4>Comparison type:</h4>
-		<div class="cda-comparison-type-radio-btns"></div>
-	</div>
-
-	<!-- Select BMP Button wrapper -->
-	<div class="cda-bmp-select-button-wrapper">
-		<button class="cda-select-bmp-button button button-primary">Select Best Management Practices</button>
-	</div>
-
-
-	<!-- BMP Selection wrapper -->
+	<!-- BMP Selection wrapper *********************************************************-->
 	<div class="cda-bmp-select-wrapper">
-		<button class="cda-back-to-main-button button button-primary">Back to main</button>
+		<button class="cda-back-to-main-button button button-primary">Back to main selections</button>
+		<div class="cda-crop-selected-wrapper"></div>
 	</div>
 
 
