--- a/html/content.html
+++ b/html/content.html
@@ -61,7 +61,7 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 
 	<!-- BMP Selection wrapper *********************************************************-->
 	<div class="cda-bmp-select-wrapper">
-		<button class="cda-back-to-main-button button button-primary">Back to main selections</button>
+		<button class="cda-back-to-main-button button button-primary">Back to main screen</button>
 		<div class="cda-crop-selected-wrapper"></div>
 	</div>
 
