work on creating total load reduction component

--- a/html/content.html
+++ b/html/content.html
@@ -61,7 +61,18 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 
 	<!-- BMP Selection wrapper *********************************************************-->
 	<div class="cda-bmp-select-wrapper">
-		<button class="cda-back-to-main-button button button-primary">Back to main screen</button>
+		<div class="cda-bmp-select-wrapper-header">
+			<div class="cda-bmp-select-header-btns">
+				<button class="cda-back-to-main-button button button-primary">Back</button>
+				<button class="cda-create-report-button button button-primary">Create Report</button>
+			</div>
+
+
+
+
+			<div class="cda-total-load-wrapper"></div>
+		</div>
+
 		<div class="cda-crop-selected-wrapper"></div>
 	</div>
 
