--- a/html/content.html
+++ b/html/content.html
@@ -66,17 +66,21 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 				<button class="cda-back-to-main-button button button-primary">Back</button>
 				<button class="cda-create-report-button button button-primary">Create Report</button>
 			</div>
-
-
-
-
 			<div class="cda-total-load-wrapper"></div>
 		</div>
-
 		<div class="cda-crop-selected-wrapper"></div>
 	</div>
 
-
+	<div class="cda-report-wrapper">
+		<div class="cda-bmp-select-header-btns">
+			<button class="cda-back-to-bmp-button button button-primary">Back</button>
+			<button class="cda-print-report-button button button-primary">Print Report</button>
+		</div>
+		<h1>Report</h1>
+		<div>Map goes here</div>
+		<br>
+		<div>Report data goes here</div>
+	</div>
 	<!-- <div class="cda-render-list">
 
 	</div>
