--- a/html/content.html
+++ b/html/content.html
@@ -3,7 +3,6 @@ Dijit ContentPane to hold all the elements. The ContentPane is assigned a dynami
 takes the ContentPane id and prepends it to every element with a declared id in this HTML before the elements are created.
 The unique ContentPane id makes all the element ids unique and prevents duplicate id errors across other apps.-->
 
-
 <div class="cda-sidebar-wrapper">
 	<div class="cda-main-wrapper">
 		<div class="cda-intro-text">Introduction text Introduction textIntroduction textIntroduction textIntroduction
@@ -76,6 +75,7 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 			<button class="cda-back-to-bmp-button button button-primary">Back</button>
 			<button class="cda-print-report-button button button-primary">Print Report</button>
 		</div>
+		<div class="cda-report-map" id="report-map"></div>
 		<h1>Report</h1>
 		<div>Map goes here</div>
 		<br>
