--- a/html/content.html
+++ b/html/content.html
@@ -14,27 +14,29 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 			<h4>Selected areas</h4>
 			<div class="cda-selected-areas"></div>
 		</div>
-		<!-- assesment radio buttons -->
-		<div class="cda-assesment-wrapper">
-			<h4>Select an assessment type:</h4>
-			<div id="assesment-radio-btns" class="cda-assesment-radio-btns"></div>
-		</div>
+
 		<!-- area scenario radio buttons -->
 		<div class="cda-areaScenario-wrapper">
 			<h4>Choose scale:</h4>
 			<div id="areaScenario-radio-btns" class="cda-areaScenario-radio-btns"></div>
 		</div>
+		<!-- assesment radio buttons -->
+		<!-- <div class="cda-assesment-wrapper">
+					<h4>Select an assessment type:</h4>
+					<div id="assesment-radio-btns" class="cda-assesment-radio-btns"></div>
+				</div> -->
+
 		<!-- delivery radio buttons -->
-		<div class="cda-delivery-wrapper">
+		<!-- <div class="cda-delivery-wrapper">
 			<h4>Choose Delivery:</h4>
 			<div id="delivery-radio-btns" class="cda-delivery-radio-btns"></div>
-		</div>
+		</div> -->
 
 		<!-- parameters to simulate checkboxes -->
-		<div class="cda-parameters-wrapper">
+		<!-- <div class="cda-parameters-wrapper">
 			<h4>Parameters to simulate:</h4>
 			<div id="parameters-checkbox" class="cda-parameters-checkbox"></div>
-		</div>
+		</div> -->
 		<!-- sediment options radio button -->
 		<div class="cda-sediment-option-wrapper">
 			<h5>Select sediment options</h5>
