build out report header and body components

--- a/html/content.html
+++ b/html/content.html
@@ -80,6 +80,7 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 		<!-- report header -->
 		<div class="cda-report-header-wrapper"></div>
 		<!-- report map -->
+		<h5 class="cda-report-sub-headers">Overview Map</h5>
 		<div class="cda-report-map" id="report-map"></div>
 		<!-- report body -->
 		<div class="cda-report-body-wrapper"></div>
