build out report header and body components

--- a/html/content.html
+++ b/html/content.html
@@ -84,9 +84,47 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 		<div class="cda-report-map" id="report-map"></div>
 		<!-- report body -->
 		<div class="cda-report-body-wrapper"></div>
-		<!-- <div class="cda-report-body-wrapper">
-
-		</div> -->
-
+		<h5 class="cda-report-sub-headers">Corn:</h5>
+		<table>
+			<thead>
+				<tr>
+					<th style="font-weight: bold;">All Load Sources</th>
+					<th>Nitrogen</th>
+					<th>Phospherous</th>
+					<th>Sediment</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<th>Initial Load (MT)</th>
+					<td>34</td>
+					<td>78</td>
+					<td>41</td>
+				</tr>
+				<tr>
+					<th>Reduced Load (MT)</th>
+					<td>34</td>
+					<td>78</td>
+					<td>41</td>
+				</tr>
+				<tr>
+					<th>Reduction</th>
+					<td>4%</td>
+					<td>8%</td>
+					<td>1%</td>
+				</tr>
+				<tr>
+					<th colspan="4">test BMP selected - have this be another table with the same width</th>
+				</tr>
+				<tr>
+					<td>1</td>
+					<td>2</td>
+					<td>3</td>
+					<td>4</td>
+					<td>5</td>
+				</tr>
+			</tbody>
+		</table>
+		<h5 class="cda-report-sub-headers">Soybeans:</h5>
 	</div>
 </div>
