remove area selections

--- a/html/content.html
+++ b/html/content.html
@@ -16,10 +16,10 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 		</div>
 
 		<!-- area scenario radio buttons -->
-		<div class="cda-areaScenario-wrapper">
+		<!-- <div class="cda-areaScenario-wrapper">
 			<h4>Choose scale:</h4>
 			<div id="areaScenario-radio-btns" class="cda-areaScenario-radio-btns"></div>
-		</div>
+		</div> -->
 		<!-- assesment radio buttons -->
 		<!-- <div class="cda-assesment-wrapper">
 					<h4>Select an assessment type:</h4>
