updating where clause on polygon selection

--- a/html/content.html
+++ b/html/content.html
@@ -60,6 +60,13 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 		<h4>Retreiving Data.....</h4>
 	</div>
 
+	<div class="cda-error-retreiving-data-wrapper">
+		<button class="cda-back-to-main-button button button-primary">Back</button>
+		<div>There has been an error retreiving data, please try again</div>
+		<div>Error Code (for testing purposes only)</div>
+		<div class="cda-request-error"></div>
+	</div>
+
 	<!-- BMP Selection wrapper *********************************************************-->
 	<div class="cda-bmp-select-wrapper">
 		<div class="cda-bmp-select-wrapper-header">
