add in error handling

--- a/html/content.html
+++ b/html/content.html
@@ -61,7 +61,7 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 	</div>
 
 	<div class="cda-error-retreiving-data-wrapper">
-		<button class="cda-back-to-main-button button button-primary">Back</button>
+		<button class="cda-back-to-main-from-error-button button button-primary">Back</button>
 		<div>There has been an error retreiving data, please try again</div>
 		<div>Error Code (for testing purposes only)</div>
 		<div class="cda-request-error"></div>
