divided query into 4 parts, now is working

--- a/html/content.html
+++ b/html/content.html
@@ -7,7 +7,8 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 	<div class="cda-main-wrapper">
 		<div class="cda-intro-text">Introduction text Introduction textIntroduction textIntroduction textIntroduction
 			textIntroduction
-			textIntroduction textIntroduction textIntroduction text</div>
+			textIntroduction textIntroduction textIntroduction text
+		</div>
 
 		<!-- selected areas component on main page -->
 		<div class="cda-selected-area-wrapper">
@@ -15,11 +16,15 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 			<div class="cda-selected-areas"></div>
 		</div>
 
+		<div class="cda-field-toggle-wrapper">
+			<div id="cda-field-toggle" class="cda-field-toggle"></div>
+		</div>
+
 		<!-- area scenario radio buttons -->
-		<!-- <div class="cda-areaScenario-wrapper">
+		<div class="cda-areaScenario-wrapper">
 			<h4>Choose scale:</h4>
 			<div id="areaScenario-radio-btns" class="cda-areaScenario-radio-btns"></div>
-		</div> -->
+		</div>
 		<!-- assesment radio buttons -->
 		<!-- <div class="cda-assesment-wrapper">
 					<h4>Select an assessment type:</h4>
@@ -62,9 +67,9 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 
 	<div class="cda-error-retreiving-data-wrapper">
 		<button class="cda-back-to-main-from-error-button button button-primary">Back</button>
-		<div>There has been an error retreiving data, please try again</div>
-		<div>Error Code (for testing purposes only)</div>
-		<div class="cda-request-error"></div>
+		<h4>There has been an error retreiving data, please try again</h4>
+		<h4>Error(for testing purposes only)</h4>
+		<div style="margin-left: 15px;" class="cda-request-error"></div>
 	</div>
 
 	<!-- BMP Selection wrapper *********************************************************-->
