--- a/html/content.html
+++ b/html/content.html
@@ -94,6 +94,10 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 		<!-- report map -->
 		<h5 class="cda-report-sub-headers">Overview Map</h5>
 		<div class="cda-report-map" id="report-map"></div>
+		<div class='cda-print-map-legend'>
+			<div class="cda-print-map-legend-box"></div>
+			<div>Area of interest</div>
+		</div>
 		<!-- report body -->
 		<div class="cda-report-body-wrapper"></div>
 
