update many areas

--- a/html/content.html
+++ b/html/content.html
@@ -4,102 +4,115 @@ takes the ContentPane id and prepends it to every element with a declared id in 
 The unique ContentPane id makes all the element ids unique and prevents duplicate id errors across other apps.-->
 
 <div class="cda-sidebar-wrapper">
-	<div class="cda-main-wrapper">
-		<div class="cda-intro-text">Introduction text Introduction textIntroduction textIntroduction textIntroduction
-			textIntroduction
-			textIntroduction textIntroduction textIntroduction text
-		</div>
+  <div class="cda-main-wrapper">
+    <div class="cda-intro-text">
+      Introduction text Introduction textIntroduction textIntroduction
+      textIntroduction textIntroduction textIntroduction textIntroduction
+      textIntroduction textntestt
+    </div>
 
-		<!-- selected areas component on main page -->
-		<div class="cda-selected-area-wrapper">
-			<h4>Selected areas</h4>
-			<div class="cda-selected-areas"></div>
-		</div>
+    <!-- selected areas component on main page -->
+    <div class="cda-selected-area-wrapper">
+      <h4>Selected areas</h4>
+      <div class="cda-selected-areas"></div>
+    </div>
 
-		<div class="cda-field-toggle-wrapper">
-			<div id="cda-field-toggle" class="cda-field-toggle"></div>
-		</div>
+    <div class="cda-field-toggle-wrapper">
+      <div id="cda-field-toggle" class="cda-field-toggle"></div>
+    </div>
 
-		<!-- area scenario radio buttons -->
-		<div class="cda-areaScenario-wrapper">
-			<h4>Choose scale:</h4>
-			<div id="areaScenario-radio-btns" class="cda-areaScenario-radio-btns"></div>
-		</div>
-		<!-- assesment radio buttons -->
-		<!-- <div class="cda-assesment-wrapper">
+    <!-- area scenario radio buttons -->
+    <div class="cda-areaScenario-wrapper">
+      <h4>Choose scale:</h4>
+      <div
+        id="areaScenario-radio-btns"
+        class="cda-areaScenario-radio-btns"
+      ></div>
+    </div>
+    <!-- assesment radio buttons -->
+    <!-- <div class="cda-assesment-wrapper">
 					<h4>Select an assessment type:</h4>
 					<div id="assesment-radio-btns" class="cda-assesment-radio-btns"></div>
 				</div> -->
 
-		<!-- delivery radio buttons -->
-		<!-- <div class="cda-delivery-wrapper">
+    <!-- delivery radio buttons -->
+    <!-- <div class="cda-delivery-wrapper">
 			<h4>Choose Delivery:</h4>
 			<div id="delivery-radio-btns" class="cda-delivery-radio-btns"></div>
 		</div> -->
 
-		<!-- parameters to simulate checkboxes -->
-		<!-- <div class="cda-parameters-wrapper">
+    <!-- parameters to simulate checkboxes -->
+    <!-- <div class="cda-parameters-wrapper">
 			<h4>Parameters to simulate:</h4>
 			<div id="parameters-checkbox" class="cda-parameters-checkbox"></div>
 		</div> -->
-		<!-- sediment options radio button -->
-		<div class="cda-sediment-option-wrapper">
-			<h5>Select sediment options</h5>
-			<div class="cda-sediment-options-radio-btns"></div>
-		</div>
+    <!-- sediment options radio button -->
+    <div class="cda-sediment-option-wrapper">
+      <h5>Select sediment options</h5>
+      <div class="cda-sediment-options-radio-btns"></div>
+    </div>
 
-		<!-- comparison type radio buttons -->
-		<!-- <div class="cda-comparison-type-wrapper">
+    <!-- comparison type radio buttons -->
+    <!-- <div class="cda-comparison-type-wrapper">
 			<h4>Comparison type:</h4>
 			<div class="cda-comparison-type-radio-btns"></div>
 		</div> -->
 
-		<!-- Select BMP Button wrapper -->
-		<div class="cda-bmp-select-button-wrapper">
-			<button class="cda-select-bmp-button button button-primary">Select Best Management Practices</button>
-		</div>
-	</div>
+    <!-- Select BMP Button wrapper -->
+    <div class="cda-bmp-select-button-wrapper">
+      <button class="cda-select-bmp-button button button-primary">
+        Select Best Management Practices
+      </button>
+    </div>
+  </div>
 
-	<!-- Building BMP selections.......  -->
-	<div class="cda-retreiving-data-wrapper">
-		<h4>Retreiving Data.....</h4>
-	</div>
+  <!-- Building BMP selections.......  -->
+  <div class="cda-retreiving-data-wrapper">
+    <h4>Retreiving Data.....</h4>
+  </div>
 
-	<div class="cda-error-retreiving-data-wrapper">
-		<button class="cda-back-to-main-from-error-button button button-primary">Back</button>
-		<h4>There has been an error retreiving data, please try again</h4>
-		<h4>Error(for testing purposes only)</h4>
-		<div style="margin-left: 15px;" class="cda-request-error"></div>
-	</div>
+  <div class="cda-error-retreiving-data-wrapper">
+    <button class="cda-back-to-main-from-error-button button button-primary">
+      Back
+    </button>
+    <h4>There has been an error retreiving data, please try again</h4>
+    <h4>Error(for testing purposes only)</h4>
+    <div style="margin-left: 15px" class="cda-request-error"></div>
+  </div>
 
-	<!-- BMP Selection wrapper *********************************************************-->
-	<div class="cda-bmp-select-wrapper">
-		<div class="cda-bmp-select-wrapper-header">
-			<div class="cda-bmp-select-header-btns">
-				<button class="cda-back-to-main-button button button-primary">Back</button>
-				<button class="cda-create-report-button button button-primary">Create Report</button>
-			</div>
-			<div class="cda-total-load-wrapper"></div>
-		</div>
-		<div class="cda-crop-selected-wrapper"></div>
-	</div>
+  <!-- BMP Selection wrapper *********************************************************-->
+  <div class="cda-bmp-select-wrapper">
+    <div class="cda-bmp-select-wrapper-header">
+      <div class="cda-bmp-select-header-btns">
+        <button class="cda-back-to-main-button button button-primary">
+          Back
+        </button>
+        <button class="cda-create-report-button button button-primary">
+          Create Report
+        </button>
+      </div>
+      <div class="cda-total-load-wrapper"></div>
+    </div>
+    <div class="cda-crop-selected-wrapper"></div>
+  </div>
 
-	<div class="cda-report-wrapper">
-		<div class=" cda-report-sticky-buttons ">
-			<button class="cda-back-to-bmp-button button button-primary">Back</button>
-			<button class="cda-print-report-button button button-primary">Print Report</button>
-		</div>
-		<!-- report header -->
-		<div class="cda-report-header-wrapper"></div>
-		<!-- report map -->
-		<h5 class="cda-report-sub-headers">Overview Map</h5>
-		<div class="cda-report-map" id="report-map"></div>
-		<div class='cda-print-map-legend'>
-			<div class="cda-print-map-legend-box"></div>
-			<div>Area of interest</div>
-		</div>
-		<!-- report body -->
-		<div class="cda-report-body-wrapper"></div>
-
-	</div>
+  <div class="cda-report-wrapper">
+    <div class="cda-report-sticky-buttons">
+      <button class="cda-back-to-bmp-button button button-primary">Back</button>
+      <button class="cda-print-report-button button button-primary">
+        Print Report
+      </button>
+    </div>
+    <!-- report header -->
+    <div class="cda-report-header-wrapper"></div>
+    <!-- report map -->
+    <h5 class="cda-report-sub-headers">Overview Map</h5>
+    <div class="cda-report-map" id="report-map"></div>
+    <div class="cda-print-map-legend">
+      <div class="cda-print-map-legend-box"></div>
+      <div>Area of interest</div>
+    </div>
+    <!-- report body -->
+    <div class="cda-report-body-wrapper"></div>
+  </div>
 </div>
