many updates to site

--- a/html/report.html
+++ b/html/report.html
@@ -1,1 +1,26 @@
-<h3>Hello Report!!!!!</h3>
+<div class="cda-report-wrapper">
+  <div class="cda-report-sticky-buttons">
+    <button class="cda-back-to-bmp-button button button-primary">Back</button>
+    <button class="cda-print-report-button button button-primary">
+      Print Report
+    </button>
+  </div>
+  <!-- report header -->
+  <div class="cda-report-header-wrapper"></div>
+  <!-- report map -->
+  <h5 class="cda-report-sub-headers">Overview Map</h5>
+  <div class="cda-report-map" id="report-map"></div>
+  <div class="cda-print-map-legend">
+    <div style="display: flex">
+      <div class="cda-print-map-legend-box"></div>
+      <div>Area of interest</div>
+    </div>
+    <div style="display: flex">
+      <div class="cda-print-map-legend-box-field"></div>
+      <div>Agricultural Fields</div>
+    </div>
+  </div>
+
+  <!-- report body -->
+  <div class="cda-report-body-wrapper"></div>
+</div>
