--- a/html/content.html
+++ b/html/content.html
@@ -90,6 +90,9 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
         <button class="cda-create-report-button button button-primary">
           Create Report
         </button>
+        <div class="cda-overall-error-warning">
+          Please fix the errors (Red BMP's) below to create report.
+        </div>
       </div>
       <div class="cda-total-load-wrapper"></div>
     </div>
@@ -109,9 +112,17 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
     <h5 class="cda-report-sub-headers">Overview Map</h5>
     <div class="cda-report-map" id="report-map"></div>
     <div class="cda-print-map-legend">
-      <div class="cda-print-map-legend-box"></div>
-      <div>Area of interest</div>
+      <div style="display: flex">
+        <div class="cda-print-map-legend-box"></div>
+        <div>Area of interest</div>
+      </div>
+      <div style="display: flex">
+        <div class="cda-print-map-legend-box-field"></div>
+        <div>Agricultural Fields</div>
+      </div>
     </div>
+
+    <p style="page-break-after: always"></p>
     <!-- report body -->
     <div class="cda-report-body-wrapper"></div>
   </div>
