--- a/html/content.html
+++ b/html/content.html
@@ -122,7 +122,8 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
       </div>
     </div>
 
-    <p style="page-break-after: always"></p>
+    <!-- <p style="page-break-after: always"></p> -->
+    <br />
     <!-- report body -->
     <div class="cda-report-body-wrapper"></div>
   </div>
