--- a/html/content.html
+++ b/html/content.html
@@ -109,16 +109,18 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
     <!-- report header -->
     <div class="cda-report-header-wrapper"></div>
     <!-- report map -->
-    <h5 class="cda-report-sub-headers">Overview Map</h5>
-    <div class="cda-report-map" id="report-map"></div>
-    <div class="cda-print-map-legend">
-      <div style="display: flex">
-        <div class="cda-print-map-legend-box"></div>
-        <div>Area of interest</div>
-      </div>
-      <div style="display: flex">
-        <div class="cda-print-map-legend-box-field"></div>
-        <div>Agricultural Fields</div>
+    <div style="position: relative">
+      <h5 class="cda-report-sub-headers">Overview Map</h5>
+      <div class="cda-report-map" id="report-map"></div>
+      <div class="cda-print-map-legend">
+        <div style="display: flex">
+          <div class="cda-print-map-legend-box"></div>
+          <div>Area of interest</div>
+        </div>
+        <div style="display: flex">
+          <div class="cda-print-map-legend-box-field"></div>
+          <div>Agricultural Fields</div>
+        </div>
       </div>
     </div>
 
