--- a/html/content.html
+++ b/html/content.html
@@ -17,7 +17,7 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
       <div id="cda-field-toggle" class="cda-field-toggle"></div>
     </div>
 
-    <div style="margin-top: 30px" class="cda-blue-text">
+    <div style="margin-top: 12px; margin-bottom: 12px" class="cda-blue-text">
       Click the map to select up to five analysis units from your selected
       scale. Click “Select Best Management Practices to calculate original loads
       and begin applying BMPs.
