add in methods doc link

--- a/html/content.html
+++ b/html/content.html
@@ -68,6 +68,14 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 			<div class="cda-comparison-type-radio-btns"></div>
 		</div> -->
 
+    <div class="cda-methods-doc-wrapper">
+      <a
+        target="_blank"
+        href="https://nascience.s3.us-west-1.amazonaws.com/apps/nrcs-la-cda-app/ConservationDeliveryApp_MethodsOverview.pdf"
+        >View Methods Document</a
+      >
+    </div>
+
     <!-- Select BMP Button wrapper -->
     <div class="cda-bmp-select-button-wrapper">
       <button class="cda-select-bmp-button button button-primary">
