--- a/html/content.html
+++ b/html/content.html
@@ -11,6 +11,18 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
       applications. Begin by selecting a scale for your analysis: Resource Unit
       (RU), 12-digit hydrologic unit (HUC 12), catchment or Agricultural field.
     </div>
+    <div class="cda-methods-doc-wrapper">
+      <a
+        target="_blank"
+        href="https://nascience.s3.us-west-1.amazonaws.com/apps/nrcs-la-cda-app/CDA+User+Manual.pdf"
+        >Open CDA user manual</a
+      >
+      <a
+        target="_blank"
+        href="https://nascience.s3.us-west-1.amazonaws.com/apps/nrcs-la-cda-app/ConservationDeliveryApp_MethodsOverview.pdf"
+        >View Methods Document</a
+      >
+    </div>
 
     <div class="cda-field-toggle-wrapper">
       <h4>Reference Layers:</h4>
@@ -19,8 +31,9 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 
     <div style="margin-top: 12px; margin-bottom: 12px" class="cda-blue-text">
       Click the map to select up to five analysis units from your selected
-      scale. Click “Select Best Management Practices to calculate original loads
-      and begin applying BMPs.
+      scale. Constituent loads can only be calculated within features that
+      contain agricultural fields. Click “Select Best Management Practices to
+      calculate original loads and begin applying BMPs.
     </div>
 
     <div style="display: flex">
@@ -67,14 +80,6 @@ The unique ContentPane id makes all the element ids unique and prevents duplicat
 			<h4>Comparison type:</h4>
 			<div class="cda-comparison-type-radio-btns"></div>
 		</div> -->
-
-    <div class="cda-methods-doc-wrapper">
-      <a
-        target="_blank"
-        href="https://nascience.s3.us-west-1.amazonaws.com/apps/nrcs-la-cda-app/ConservationDeliveryApp_MethodsOverview.pdf"
-        >View Methods Document</a
-      >
-    </div>
 
     <!-- Select BMP Button wrapper -->
     <div class="cda-bmp-select-button-wrapper">
